<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="286dp"
            android:layout_height="130dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="30dp"
            android:elegantTextHeight="true"
            android:text="@string/tris"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="38dp" />

        <Button
            android:id="@+id/buttonX"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="230dp"
            android:background="@drawable/button_background"
            android:text="@string/gioco_o"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/buttonO"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginTop="230dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_background"
            android:text="@string/gioco_x"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <Button
            android:id="@+id/play"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="100dp"
            android:background="@color/white"
            android:enabled="false"
            android:shadowColor="@color/white"
            android:text="@string/start"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="48dp" />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="100dp"
            android:columnCount="3"
            android:rowCount="1">

            <Button
                android:id="@+id/B3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@color/white"
                android:text="@string/best3"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:visibility="invisible" />

            <Button
                android:id="@+id/B5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="3dp"
                android:background="@color/white"
                android:text="@string/best5"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:visibility="invisible" />

            <Button
                android:id="@+id/Bfree"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginLeft="3dp"
                android:background="@color/white"
                android:text="@string/free"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:visibility="invisible" />

        </GridLayout>

        <Button
            android:id="@+id/Choice"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="100dp"
            android:background="@color/white"
            android:text="@string/start"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="48dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/choice"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/leftRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="70dp"
            android:text="@string/row"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="80dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/rightRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="70dp"
            android:text="@string/row"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="80dp"
            android:visibility="invisible"/>

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>