<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity=""
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:layout_gravity="end"
            android:layout_marginRight="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/end"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:visibility="invisible"/>

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:columnCount="3"
            android:rowCount="3">

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/spazioVuoto"
                android:textSize="0dp" />

        </GridLayout>

        <TextView
            android:id="@+id/setScoreO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|start"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="90dp"
            android:text="0"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="50dp"/>

        <TextView
            android:id="@+id/setScoreX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|end"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="90dp"
            android:text="0"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|start"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="180dp"
            android:text="@string/scoreO"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom|end"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="180dp"
            android:text="@string/scoreX"
            android:textColor="@color/black"
            android:textSize="20dp"/>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>